tests/specs/ecosystem/taisan11/nodelessbuildplugin/0_1_0.test
taisan11/nodelessbuildplugin/0.1.0
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-type]: missing explicit type in the public API
 --> /nodelessBuildPlugin.ts:4:14
  | 
4 | export const nodelessPlugin = {
  |              ^^^^^^^^^^^^^^ this symbol is missing an explicit type
  = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


